# pipguard

./: .gitignore  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TODOS.md  action.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  lint.yml  publish.yml  release-drafter.yml  self-test.yml  tests.yml
allowlist/: index.html
benchmark/: README.md  baseline.json  corpus.json  run_benchmark.py
benchmark/corpus/benign/: app_config.py  dynamic_attr.py  http_client.py  legit_setup.py  normal_path_join.py  plugin_loader.py  reflection_local_obj.py  runtime_subprocess.py
benchmark/corpus/bypass/: alias_network_setup.py  assigned_callable_setup.py  cred_path_join_setup.py  dunder_import_setup.py  getattr_os_system_setup.py  getattr_variable_attr_setup.py  httpx_exfil_setup.py  os_execv_setup.py  pty_spawn_setup.py  runpy_run_path_setup.py  subprocess_bash_c_setup.py  urlretrieve_setup.py
benchmark/corpus/malicious/: cred_read_setup.py  exec_b64_setup.py  net_exfil_setup.py  os_system_setup.py  pickle_loads_setup.py  pth_autorun.pth
changelog/: index.html
docs/: allowlist.md  changelog.md  exit-codes.md  how-it-works.md  index.md  installation.md  policy.md  risk-levels.md  runtime-sandbox.md  security-gap-assessment.md  usage.md
docs/assets/: demo.tape  requirements.txt
docs/stylesheets/: extra.css
docs/zh/: allowlist.md  exit-codes.md  how-it-works.md  index.md  installation.md  policy.md  risk-levels.md  usage.md
examples/: README.md  scan-feed-cron.yml
exit-codes/: index.html
how-it-works/: index.html
installation/: index.html
overrides/: main.html
pipguard/: __init__.py  aggregator.py  cleanup.py  cli.py  deps.py  downloader.py  extractor.py  feed.py  formatters.py  installer.py  intel.py  models.py  osv.py  policy.py  release_age.py  sandbox.py  scanner.py
policy/: index.html
risk-levels/: index.html
runtime-sandbox/: index.html
search/: search_index.json
security-gap-assessment/: index.html
tests/: __init__.py  test_aggregator.py  test_benchmark.py  test_cli.py  test_coverage.py  test_deps.py  test_downloader.py  test_extractor.py  test_feed.py  test_formatters.py  test_installer.py  test_intel.py  test_osv.py  test_policy.py  test_release_age.py  test_sandbox.py  test_scanner.py
tests/fixtures/: build_test_wheel.py
tests/fixtures/clean_pkg/: __init__.py  setup.py
tests/fixtures/clean_pkg/mypkg/: __init__.py
tests/fixtures/pth_attack/: __init__.py  litellm_attack.pth  setup.py
tests/fixtures/wheels/: malicious_pth-1.0.0-py3-none-any.whl
usage/: index.html
zh/: index.html
zh/allowlist/: index.html
zh/exit-codes/: index.html
zh/how-it-works/: index.html
zh/installation/: index.html
zh/policy/: index.html
zh/risk-levels/: index.html
zh/runtime-sandbox/: index.html
zh/security-gap-assessment/: index.html
zh/usage/: index.html
