[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pipguard"
dynamic = ["version"]
description = "Scan Python packages for supply chain attacks before installing them"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Xianpeng Shen", email="xianpeng.shen@gmail.com" }
]
license = { text="MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]

[project.scripts]
pipguard = "pipguard.cli:main"

[project.urls]
Homepage = "https://github.com/shenxianpeng/pipguard"
"Bug Tracker" = "https://github.com/shenxianpeng/pipguard/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools_scm]
# Derives version from git tags: v0.2.0 → 0.2.0
# Between tags: 0.2.0.dev3+gabcdef (automatically)

[tool.coverage.run]
source = ["pipguard"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
