[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pipguard"
dynamic = ["version"]
description = "Scan Python packages for supply chain attacks before installing them"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="Xianpeng Shen", email="xianpeng.shen@gmail.com" }
]
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
pipguard = "pipguard.cli:main"

[project.urls]
Homepage = "https://github.com/shenxianpeng/pipguard"
"Bug Tracker" = "https://github.com/shenxianpeng/pipguard/issues"

[tool.setuptools.packages.find]
include = ["pipguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools_scm]
# Derives version from git tags: v0.2.0 → 0.2.0
# Between tags: 0.2.0.dev3+gabcdef (automatically)

[tool.coverage.run]
source = ["pipguard"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
]
ignore = [
    "S101",   # assert used (OK in tests)
    "S202",   # tarfile/zipfile extractall (required for package extraction)
    "S310",   # urllib.request.urlopen (required for OSV/feed/intel queries)
    "S314",   # xml.etree (required for RSS parsing; input is from PyPI)
    "S603",   # subprocess without shell=True check (needed for pip)
    "S607",   # starting a process with a partial path
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name (pre-existing lambda var)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108"]
"benchmark/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
